added a deletepoll functionality
