# src/main.go
@@ -35,6 +35,9 @@ func setupRouter(db_controller *sql.DB) *gin.Engine {
 	v1.POST("poll/:id/vote", func(c *gin.Context) {
 		server.Vote(jwtManager, c)
 	})
+	v1.DELETE("/polls/:id", func(c *gin.Context) {
+		server.DeletePoll(jwtManager, c)
+	})
 	v1.GET("/users/:name", server.UserExists)
 
 	return r
